# pangaeapy

./: .gitignore  ADCP.ipynb  CHANGELOG.md  Pangaea Test 1.ipynb  README.md  RELEASE_GUIDELINES.md  conf.py  pandata.py  pyproject.toml  release.sh  requirements.txt  setup.cfg  setup.py  tox.ini
.github/workflows/: gh-pages.yml  static.yml
docs/: api.rst  api_documentation.rst  conf.py  documentation.html  how_to.rst  index.rst  pandataset.html  pandataset.md  readme_link.md  user_guide.rst
docs/_build/doctrees/: api_documentation.doctree  environment.pickle  how_to.doctree  index.doctree  pandataset.doctree  readme_link.doctree
docs/_build/html/: .buildinfo  .buildinfo.bak  api_documentation.html  genindex.html  how_to.html  index.html  objects.inv  pandataset.html  py-modindex.html  readme_link.html  search.html  searchindex.js
docs/_build/html/_modules/: index.html
docs/_build/html/_modules/pangaeapy/: pandataset.html  panquery.html
docs/_build/html/_sources/: how_to.rst.txt  pandataset.md.txt
docs/_build/html/_static/: documentation_options.js
examples/: ADCP.ipynb  SIMMAX.ipynb  example.ipynb  netcdftest.py
examples/advanced/: Advanced  -  Generalized Additive Models (GAM).ipynb  Advanced - Principal Component Analysis.ipynb  Advanced - Smoothing.ipynb  Advanced - Spectral analysis SPECMAP.ipynb  read.me
examples/basics/: Basic 1 - load a PANGAEA dataset.ipynb  Basic 2 - dataframe.ipynb  Basic 3 - plotting with pandas.ipynb
pandata/: pandataset.py
pangaeapy/: __init__.py  pandataset.py
pangaeapy/export/: nc194695_sdn.nc  nc810300_pan.nc  nc810300_sdn.nc
pangaeapy/exporter/: pan_exporter.py  pan_netcdf_exporter.py
pangaeapy/src/: pandataset.py
pangaeapy/src/data/: parameter_mapping.csv
pangaeapy/src/export/: read.me
pangaeapy/src/exporter/: pan_dwca_exporter.py  pan_exporter.py  pan_frictionless_exporter.py  pan_netcdf_exporter.py
source/: pandataset.py
src/pangaeapy/: __init__.py  _core.py  pandataset.py  panquery.py  requirements.txt  setup.py
src/pangaeapy/data/: parameter_mapping.csv
src/pangaeapy/exporter/: __init__.py  pan_dwca_exporter.py  pan_exporter.py  pan_frictionless_exporter.py  pan_netcdf_exporter.py  pan_panimport_exporter.py
src/pangaeapy/exporter/xslt/: panmd2eml.xslt
src/pangaeapy/mappings/: mapping_helper.py  pan_mappings.json
test/: conftest.py  panimporttest.py  test_PanDataSet.py  test_PanQuery.py  test_dataset_attributes.py
