[build-system]
requires = ["setuptools >= 80.0", "setuptools-scm[simple] >= 8.0"]
build-backend = "setuptools.build_meta"

[project]
name = "pangaeapy"
dynamic = ["version"]
authors = [
  {name = "Robert Huber", email = "rhuber@uni-bremen.de"},
]
description = "Download and analyse (meta-)data of PANGAEA datasets"
readme = "README.md"
license = "GPL-3.0-only"
license-files = ["LICEN[CS]E*"]
classifiers = [
  "Development Status :: 5 - Production/Stable",
  "Intended Audience :: Science/Research",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3 :: Only",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Programming Language :: Python :: 3.14",
  "Topic :: Scientific/Engineering",
]
requires-python = ">= 3.10"
dependencies = [
  "aiohttp >= 3.11.0",
  "lxml >= 4.9.3",
  "netcdf4 > 1.6.5",
  "numpy >= 1.24.4",
  "pandas >= 2.2.2",
  "requests >= 2.26.0",
]

[project.urls]
Homepage = "https://www.pangaea.de"
Source = "https://github.com/pangaea-data-publisher/pangaeapy"
Documentation = "https://pangaea-data-publisher.github.io/pangaeapy/"
Issues = "https://github.com/pangaea-data-publisher/pangaeapy/issues"

[tool.tox]
requires = ["tox >= 4.19"]
env_list = [
  "3.10",
  "3.11",
  "3.12",
  "3.13",
  "3.14",
  "docs",
]

[tool.tox.env_run_base]
deps = [
  "pytest >= 8.0",
  "pytest-mock >= 3.13.0",
  "requests-mock >= 1.12.1",
]
commands = [["pytest"]]

[tool.tox.env.docs]
deps = [
  "sphinx >= 8.0",
  "myst-parser",
  "furo",
]
commands = [["sphinx-build", "-b", "html", "docs", "docs{/}_build{/}html"]]
