[metadata]
name = pangaeapy
version = 1.0.20
author = Robert Huber
author_email = rhuber@uni-bremen.de
description = This module allows to download and analyse metadata as well as data from tabular PANGAEA (https://www.pangaea.de) datasets.                  Usage:         import pangaeapy.pandataset as pd         ds= pd.PanDataSet(787140)         print(ds.title)         print(ds.data.head())                  Please visit the github project page to see more documentation and some examples:         https://github.com/pangaea-data-publisher/pangaeapy
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/pangaea-data-publisher/pangaeapy
# project_urls
classifiers =
            Programming Language :: Python :: 3
            License :: OSI Approved :: GNU Lesser General Public License v3 (LGPLv3)
            Operating System :: OS Independent

[options]
package_dir =
            = src
packages = find:
include_package_data = true
python_requires = >=3.8
install_requires =
    cftime >= 1.6.3
    lxml >= 4.9.3
    netcdf4 ~= 1.6.3
    numpy >=1.24.4
    pandas >=2.0.3
    requests >= 2.26.0

[options.packages.find]
where = src
[options.package_data]
pangaeapy =
    exporter/xslt/*.xslt
    data/*.csv
    mappings/*.json

